--- a/css/blog-styles.css
+++ b/css/blog-styles.css
@@ -292,11 +292,13 @@ a:hover {
     
     code {
       background-color: #2d3748;
+      color: #f7fafc;
     }
     
     pre {
       background-color: #2d3748;
       border-color: #4a5568;
+      color: #f7fafc;
     }
     
     blockquote {
